fragment-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fragment-gateway
  namespace: default
  labels:
    app: fragment-gateway
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: api
      name: http
  selector:
    app: fragment-gateway
