fragment-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fragment-gateway
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
  labels:
    app: fragment-gateway
spec:
  tls:
    - hosts:
        - tapps.io
      secretName: tapps-tls
  rules:
    - host: tapps.io
      http:
        paths:
          - path: /api/fragment-gateway(/|$)(.*)
            backend:
              serviceName: fragment-gateway
              servicePort: http
